Improve pane and window control

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -38,6 +38,22 @@ bind-key C-f send-prefix
 bind-key | split-window -h
 bind-key - split-window -v
 
+# Pane selection vi style
+bind-key h select-pane -L # Left
+bind-key j select-pane -D # Down
+bind-key k select-pane -U # Up
+bind-key l select-pane -R # Right
+
+# Resize panes
+bind-key -r H resize-pane -L 5 # Left
+bind-key -r J resize-pane -D 5 # Down
+bind-key -r K resize-pane -U 5 # Up
+bind-key -r L resize-pane -R 5 # Right
+
+# Window selection vi style
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
+
 #-------#
 # Utils #
 #-------#
@@ -102,11 +118,6 @@ set-option -g status-right ' "#{=21:pane_title}" %a %d-%b %H:%M'
 # bind-key -t vi-copy 'v' begin-selection
 # bind-key -t vi-copy 'y' copy-selection
 
-# Surfing panes vi style
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
 
 #---------------------------
 #--------------------------
@@ -126,16 +137,6 @@ bind-key l select-pane -R
 #set -g mouse on
 #unbind -n MouseDrag1Pane
 #unbind -Tcopy-mode MouseDrag1Pane
-
-# Quick window selection
-# bind -r C-h select-window -t :-
-# bind -r C-l select-window -t :+
-
-# Resize panes
-# bind -r H resize-pane -L 5
-# bind -r J resize-pane -D 5
-# bind -r K resize-pane -U 5
-# bind -r L resize-pane -R 5
 
 # Mouse mode
 # set -g mouse off
