--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -24,6 +24,9 @@ set-option -w -g aggressive-resize on
 set-option -w -g monitor-activity on
 set-option -g visual-activity on
 
+# Mouse mode
+set-option -g mouse off
+
 #-------------#
 # Keybindings #
 #-------------#
@@ -138,8 +141,6 @@ set-option -g status-right ' "#{=21:pane_title}" %a %d-%b %H:%M'
 #unbind -n MouseDrag1Pane
 #unbind -Tcopy-mode MouseDrag1Pane
 
-# Mouse mode
-# set -g mouse off
 
 
 # Status line's colors
