--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -14,6 +14,8 @@ set-option -g default-terminal "screen-256color"
 
 # Rename windows if no specific name given
 set-option -w -g automatic-rename
+# Don't rename windows once renamed!
+set-option -g allow-rename off
 
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
