--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -29,6 +29,9 @@ set-option -g visual-activity on
 # Mouse mode
 set-option -g mouse off
 
+# Set zsh as shell
+set -g default-shell /bin/zsh
+
 #-------------#
 # Keybindings #
 #-------------#
