Undo unbindig of default tmux prefix

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -38,7 +38,8 @@ set -g default-shell /bin/zsh
 
 # Prefix
 set-option -g prefix C-f
-unbind-key C-b
+# Do not unbind the standard prefix, for other people
+# unbind-key C-b
 # Not sure if here should be C-f or just f
 bind-key C-f send-prefix
 
