--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -23,14 +23,15 @@ set-option -g allow-rename off
 set-option -w -g aggressive-resize on
 
 # Activity monitoring
-set-option -w -g monitor-activity on
-set-option -g visual-activity on
+# Temporary deactivated because I don't find it useful
+# set-option -w -g monitor-activity on
+# set-option -g visual-activity on
 
 # Mouse mode
 set-option -g mouse off
 
 # Set zsh as shell
-set -g default-shell /bin/zsh
+set-option -g default-shell /bin/zsh
 
 #-------------#
 # Keybindings #
