--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -33,6 +33,9 @@ set-option -g mouse off
 # Set zsh as shell
 set-option -g default-shell /bin/zsh
 
+# Repeatable actions time window 1 second
+set-option -g repeat-time 1000
+
 #-------------#
 # Keybindings #
 #-------------#
