Set brewed zsh for alacritty and tmux

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -31,7 +31,7 @@ set-option -w -g aggressive-resize on
 set-option -g mouse off
 
 # Set zsh as shell
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /usr/local/bin/zsh
 
 # Repeatable actions time window 1 second
 set-option -g repeat-time 1000
