Set default prefix as secondary for other people

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -42,8 +42,7 @@ set-option -g repeat-time 1000
 
 # Prefix
 set-option -g prefix C-f
-# Do not unbind the standard prefix, for other people
-# unbind-key C-b
+set-option -g prefix2 C-b # Keep default prefix for other people
 # Not sure if here should be C-f or just f
 bind-key C-f send-prefix
 
