--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -2,39 +2,37 @@
 # Better defaults #
 #-----------------#
 
+# Change the default $TERM to scren-256color (tmux-256color is problematic with zsh )
+# This is a quite fucked up setting. Basically, don't touch it if possible.
+# I have researched this deeply a couple times and still can't figure it out. FORGET IT!!
+# set-option -s default-terminal "screen-256color"
+# set-option -s default-terminal "screen" THIS is the default option. Let's see if it works properly
+
 # Setting the delay between prefix and command
-# POSSIBLE SIDE-EFFECTS
-set-option -s escape-time 1
+# This helps with issues with vim/neovim
+set-option -s escape-time 10
 
 # Start numbering windows at 1 instead of 0
 set-option -g base-index 1
 
-# Change the default $TERM to scren-256color (tmux-256color is problematic)
-set-option -g default-terminal "screen-256color"
-
-# Rename windows if no specific name given
-set-option -w -g automatic-rename
-# Don't rename windows once renamed!
-set-option -g allow-rename off
-
-# Rather than constraining window size to the maximum size of any client
-# connected to the *session*, constrain window size to the maximum size of any
-# client connected to *that window*. Much more reasonable.
-set-option -w -g aggressive-resize on
-
-# Activity monitoring
-# Temporary deactivated because I don't find it useful
-# set-option -w -g monitor-activity on
-# set-option -g visual-activity on
-
-# Mouse mode
-set-option -g mouse off
-
 # Set zsh as shell
-set-option -g default-shell /usr/local/bin/zsh
+set-option -g default-shell "/usr/local/bin/zsh"
 
 # Repeatable actions time window 1 second
 set-option -g repeat-time 1000
+
+# Activate vi-keys in the status line (for example, for the command prompt)
+set-option -g status-keys vi
+
+# Resize tmux to the smallest client attached to the window, instead of to the session
+set-window-option -g aggressive-resize on
+
+# Activate vi-keys in copy mode
+set-window-option -g mode-keys vi
+
+# Deactivate notification bell
+set-window-option -g monitor-bell off
+
 
 #-------------#
 # Keybindings #
@@ -76,6 +74,16 @@ bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded!"
 # Create a new window giving it a name
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
+#------------#
+# Status bar #
+#------------#
+
+# Center align window list
+set-option -g status-justify centre
+
+# Formatting right side
+set-option -g status-right ' "#{=21:pane_title}" %a %d-%b %H:%M'
+
 #---------#
 # Styling #
 #---------#
@@ -109,57 +117,3 @@ set-option -g display-panes-colour colour166 #orange
 ####################
 ### COPYPASTED END
 ###################
-
-
-#------------#
-# Status bar #
-#------------#
-
-# Center align window list
-set-option -g status-justify centre
-
-# Formatting right side
-set-option -g status-right ' "#{=21:pane_title}" %a %d-%b %H:%M'
-
-#---------#
-# Vi shit #
-#---------#
-
-# Vi copypaste mode
-# set-window-option -g mode-keys vi
-# bind-key -t vi-copy 'v' begin-selection
-# bind-key -t vi-copy 'y' copy-selection
-
-
-#---------------------------
-#--------------------------
-
-#COPY PASTED
-#-----------
-## If running inside tmux ($TMUX is set), then change the status line to red
-#%if #{TMUX}
-#set -g status-bg red
-#%endif
-
-## Some tweaks to the status line
-#set -g status-right "%H:%M"
-#set -g window-status-current-attr "underscore"
-
-## Turn the mouse on, but without copy mode dragging
-#set -g mouse on
-#unbind -n MouseDrag1Pane
-#unbind -Tcopy-mode MouseDrag1Pane
-
-
-
-# Status line's colors
-# set -g status-style fg=white,bg=black
-
-# Windows list's colors
-# setw -g window-status-style fg=cyan,bg=black
-
-# Active window's colors
-# setw -g window-status-current-style fg=black,bg=green
-
-#agresive resize
-#setw -g aggressive-resize on
