Update $TERM issue comments

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -2,11 +2,13 @@
 # Better defaults #
 #-----------------#
 
-# Change the default $TERM to scren-256color (tmux-256color is problematic with zsh )
-# This is a quite fucked up setting. Basically, don't touch it if possible.
-# I have researched this deeply a couple times and still can't figure it out. FORGET IT!!
-# set-option -s default-terminal "screen-256color"
-# set-option -s default-terminal "screen" THIS is the default option. Let's see if it works properly
+# `screen` is the best family for $TERM, being the most general and widely available
+# `tmux` is better but not widely available, it may be needed for italics and other shenanigans
+# To use `tmux` it is needed to update the system's `terminfo` database or compile a new one
+# The default option "screen" only uses 8 colors, so this sets the 256 color one
+# To solve vim background clearing issues, it's likely that options like `-bce` or `-s` will be needed
+# I have a folder just for the $TERM issue in my bookmarks
+set-option -s default-terminal "screen-256color"
 
 # Setting the delay between prefix and command
 # This helps with issues with vim/neovim
