--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -2,5 +2,25 @@
 	name = Hector Huertas
 	email = hectorhuertas@gmail.com
 
+[core]
+	pager = diff-so-fancy | less --tabs=4 -RFX
+
 [color]
 	ui = true
+
+[color "diff"]
+	meta = yellow
+	frag = magenta bold
+	commit = yellow bold
+	old = red bold
+	new = green bold
+	whitespace = red reverse
+
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+
+[diff-so-fancy]
+	markEmptyLines = false
