Add tmux vi copy-paste keybinds with system clipbobard integration

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -66,6 +66,10 @@ bind-key -r L resize-pane -R 5 # Right
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
+# Copy-paste vi style
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
+
 #-------#
 # Utils #
 #-------#
