--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -51,10 +51,10 @@ bind-key | split-window -h
 bind-key - split-window -v
 
 # Pane selection vi style
-bind-key h select-pane -L # Left
-bind-key j select-pane -D # Down
-bind-key k select-pane -U # Up
-bind-key l select-pane -R # Right
+bind-key -r C-h select-pane -L # Left
+bind-key -r C-j select-pane -D # Down
+bind-key -r C-k select-pane -U # Up
+bind-key -r C-l select-pane -R # Right
 
 # Resize panes
 bind-key -r H resize-pane -L 5 # Left
@@ -63,8 +63,8 @@ bind-key -r K resize-pane -U 5 # Up
 bind-key -r L resize-pane -R 5 # Right
 
 # Window selection vi style
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+# bind-key -r C-h select-window -t :-
+# bind-key -r C-l select-window -t :+
 
 # Copy-paste vi style
 bind-key -T copy-mode-vi v send-keys -X begin-selection
