Removing sending the prefix on tmux

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -43,8 +43,8 @@ set-window-option -g monitor-bell off
 # Prefix
 set-option -g prefix C-f
 set-option -g prefix2 C-b # Keep default prefix for other people
-# Not sure if here should be C-f or just f
-bind-key C-f send-prefix
+# Sending the prefix is confusing when trying to only hit prefix, so removing
+# bind-key C-f send-prefix
 
 # Pane splitting
 bind-key | split-window -h
