--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -44,6 +44,8 @@ set-window-option -g monitor-bell off
 set-option -g prefix C-f
 set-option -g prefix2 C-b # Keep default prefix for other people
 # Sending the prefix is confusing when trying to only hit prefix, so removing
+# If set to `f`, pressing `prefix + f` will send `C-f` to the underlying program
+# If set to `C-f`, pressing `prefix + prefix` will send `C-f` to the underlying program
 # bind-key C-f send-prefix
 
 # Pane splitting
