Edit tmux navigation to reduce mistakes

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -58,11 +58,23 @@ bind-key -r C-j select-pane -D # Down
 bind-key -r C-k select-pane -U # Up
 bind-key -r C-l select-pane -R # Right
 
+# Remove default go-to-up-pane to avoid involuntary activation with history search in ssh shells
+unbind-key Up
+
+# Remove default go-to-last pane to avoid involuntary activation when failing to select-right-pane
+unbind-key l
+
 # Resize panes
 bind-key -r H resize-pane -L 5 # Left
 bind-key -r J resize-pane -D 5 # Down
 bind-key -r K resize-pane -U 5 # Up
 bind-key -r L resize-pane -R 5 # Right
+
+# Make window selection consistent with pane selection
+bind-key -r C-p select-window -t :-
+bind-key -r C-n select-window -t :+
+unbind-key p
+unbind-key n
 
 # Window selection vi style
 # bind-key -r C-h select-window -t :-
