--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 dotfiles/.config/nvim/.netrwhist
-dotfiles/.zsh/.history
-dotfiles/.zsh/.zcompdump
+dotfiles/.config/zsh/.history
+dotfiles/.config/zsh/.zcompdump
