Move tmux to .config

--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -26,6 +26,9 @@ set-option -g repeat-time 1000
 # Activate vi-keys in the status line (for example, for the command prompt)
 set-option -g status-keys vi
 
+# Prevent window renaming
+set-option -g allow-rename off
+
 # Resize tmux to the smallest client attached to the window, instead of to the session
 set-window-option -g aggressive-resize on
 
@@ -34,7 +37,6 @@ set-window-option -g mode-keys vi
 
 # Deactivate notification bell
 set-window-option -g monitor-bell off
-
 
 #-------------#
 # Keybindings #
