Add gcp-dev to UW setups

--- a/dotfiles/.ssh/config
+++ b/dotfiles/.ssh/config
@@ -1,4 +1,4 @@
-# UW AWS
+# UW SSH
 # jumpbox
 Host jumpbox.*.uw.systems ?.jumpbox.*.uw.systems
         IdentityFile           ~/.ssh/id_ed25519_uw
@@ -30,11 +30,17 @@ Host !jumpbox.net.uw.systems !*.jumpbox.net.uw.systems *.net.uw.systems 10.5* ip
         StrictHostKeyChecking  no
         UserKnownHostsFile     /dev/null
 
-Host *.uw-dev.internal
+Host !jumpbox.dev.gcp.uw.systems !*.jumpbox.dev.gcp.uw.systems *.dev.gcp.uw.systems 10.22* *.uw-dev.internal
         IdentityFile           ~/.ssh/id_ed25519_uw
         User                   core
         ProxyJump              jumpbox.dev.gcp.uw.systems
         StrictHostKeyChecking  no
         UserKnownHostsFile     /dev/null
 
+Host !jumpbox.prod.gcp.uw.systems !*.jumpbox.prod.gcp.uw.systems *.prod.gcp.uw.systems 10.33* *.uw-prod.internal
+        IdentityFile           ~/.ssh/id_ed25519_uw
+        User                   core
+        ProxyJump              jumpbox.prod.gcp.uw.systems
+        StrictHostKeyChecking  no
+        UserKnownHostsFile     /dev/null
 ## End UW AWS configs ###
