--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -91,7 +91,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
 #-------#
 
 # Reload configuration
-bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded!"
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Configuration reloaded!"
 
 # Create a new window giving it a name
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
