--- a/dotfiles/.ssh/config
+++ b/dotfiles/.ssh/config
@@ -1,46 +1,61 @@
 # UW SSH
-# jumpbox
+# jumpboxes
 Host jumpbox.*.uw.systems ?.jumpbox.*.uw.systems
-        IdentityFile           ~/.ssh/id_ed25519_uw
-        User                   core
-        Port                   50620
-        ConnectTimeout         60
-        StrictHostKeyChecking  no
-        UserKnownHostsFile     /dev/null
+        IdentityFile            ~/.ssh/id_ed25519_uw
+        User                    core
+        Port                    50620
+        ConnectTimeout          60
+        StrictHostKeyChecking   no
+        UserKnownHostsFile      /dev/null
+Host *.onion
+        IdentityFile            ~/.ssh/id_ed25519_uw
+        User                     root
+        ProxyCommand            ncat --proxy-type socks5 --proxy 127.0.0.1:9050 %h %p
+        # To help with the slowness of tor
+        Compression             yes
+        StrictHostKeyChecking   no
+        UserKnownHostsFile      /dev/null
 
 # One stanza per environment:
 Host !jumpbox.dev.uw.systems !*.jumpbox.dev.uw.systems *.dev.uw.systems 10.66.* ip-10-66-*.compute.internal
-        IdentityFile           ~/.ssh/id_ed25519_uw
-        User                   core
-        ProxyJump              jumpbox.dev.uw.systems
-        StrictHostKeyChecking  no
-        UserKnownHostsFile     /dev/null
+        IdentityFile            ~/.ssh/id_ed25519_uw
+        User                    core
+        ProxyJump               jumpbox.dev.uw.systems
+        StrictHostKeyChecking   no
+        UserKnownHostsFile      /dev/null
 
 Host !jumpbox.prod.uw.systems !*.jumpbox.prod.uw.systems *.prod.uw.systems 10.44.* ip-10-44-*.compute.internal
-        IdentityFile           ~/.ssh/id_ed25519_uw
-        User                   core
-        ProxyCommand           ssh -q jumpbox.prod.uw.systems ncat %h %p
-        StrictHostKeyChecking  no
-        UserKnownHostsFile     /dev/null
+        IdentityFile            ~/.ssh/id_ed25519_uw
+        User                    core
+        ProxyCommand            ssh -q jumpbox.prod.uw.systems ncat %h %p
+        StrictHostKeyChecking   no
+        UserKnownHostsFile      /dev/null
 
 Host !jumpbox.net.uw.systems !*.jumpbox.net.uw.systems *.net.uw.systems 10.5* ip-10-5*.compute.internal
-        IdentityFile           ~/.ssh/id_ed25519_uw
-        User                   core
-        ProxyCommand           ssh -q jumpbox.net.uw.systems ncat %h %p
-        StrictHostKeyChecking  no
-        UserKnownHostsFile     /dev/null
+        IdentityFile            ~/.ssh/id_ed25519_uw
+        User                    core
+        ProxyCommand            ssh -q jumpbox.net.uw.systems ncat %h %p
+        StrictHostKeyChecking   no
+        UserKnownHostsFile      /dev/null
 
 Host !jumpbox.dev.gcp.uw.systems !*.jumpbox.dev.gcp.uw.systems *.dev.gcp.uw.systems 10.22* *.uw-dev.internal
-        IdentityFile           ~/.ssh/id_ed25519_uw
-        User                   core
-        ProxyJump              jumpbox.dev.gcp.uw.systems
-        StrictHostKeyChecking  no
-        UserKnownHostsFile     /dev/null
+        IdentityFile            ~/.ssh/id_ed25519_uw
+        User                    core
+        ProxyJump               jumpbox.dev.gcp.uw.systems
+        StrictHostKeyChecking   no
+        UserKnownHostsFile      /dev/null
 
 Host !jumpbox.prod.gcp.uw.systems !*.jumpbox.prod.gcp.uw.systems *.prod.gcp.uw.systems 10.33* *.uw-prod.internal
-        IdentityFile           ~/.ssh/id_ed25519_uw
-        User                   core
-        ProxyJump              jumpbox.prod.gcp.uw.systems
-        StrictHostKeyChecking  no
-        UserKnownHostsFile     /dev/null
+        IdentityFile            ~/.ssh/id_ed25519_uw
+        User                    core
+        ProxyJump               jumpbox.prod.gcp.uw.systems
+        StrictHostKeyChecking   no
+        UserKnownHostsFile      /dev/null
+Host 192.168.1.10*
+        IdentityFile            ~/.ssh/id_ed25519_uw
+        User                    core
+        Port                    50620
+				ProxyJump               zkcfmk55jht7dpny.onion
+        StrictHostKeyChecking   no
+        UserKnownHostsFile      /dev/null
 ## End UW AWS configs ###
