Increase tmux scrollback buffer

--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -29,6 +29,9 @@ set-option -g status-keys vi
 # Prevent window renaming
 set-option -g allow-rename off
 
+# Scrollback buffer size
+set-option -g history-limit 5000
+
 # Resize tmux to the smallest client attached to the window, instead of to the session
 set-window-option -g aggressive-resize on
 
