--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -58,10 +58,23 @@ bind-key | split-window -h
 bind-key - split-window -v
 
 # Pane selection vi style
-bind-key -r C-h select-pane -L # Left
-bind-key -r C-j select-pane -D # Down
-bind-key -r C-k select-pane -U # Up
-bind-key -r C-l select-pane -R # Right
+bind-key -n M-h select-pane -L # Left
+bind-key -n M-j select-pane -D # Down
+bind-key -n M-k select-pane -U # Up
+bind-key -n M-l select-pane -R # Right
+#bind-key -r C-h select-pane -L # Left
+#bind-key -r C-j select-pane -D # Down
+#bind-key -r C-k select-pane -U # Up
+#bind-key -r C-l select-pane -R # Right
+
+# Window selection vi style
+bind-key -n M-p select-window -t :-
+bind-key -n M-n select-window -t :+
+#bind-key -r C-p select-window -t :-
+#bind-key -r C-n select-window -t :+
+#unbind-key p
+#unbind-key n
+
 
 # Remove default go-to-up-pane to avoid involuntary activation with history search in ssh shells
 unbind-key Up
@@ -76,14 +89,7 @@ bind-key -r K resize-pane -U 5 # Up
 bind-key -r L resize-pane -R 5 # Right
 
 # Make window selection consistent with pane selection
-bind-key -r C-p select-window -t :-
-bind-key -r C-n select-window -t :+
-unbind-key p
-unbind-key n
 
-# Window selection vi style
-# bind-key -r C-h select-window -t :-
-# bind-key -r C-l select-window -t :+
 
 # Copy-paste vi style
 bind-key -T copy-mode-vi v send-keys -X begin-selection
