Disable vi mode on command lines

--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -23,8 +23,8 @@ set-option -g default-shell "/usr/local/bin/zsh"
 # Repeatable actions time window 1 second
 set-option -g repeat-time 1000
 
-# Activate vi-keys in the status line (for example, for the command prompt)
-set-option -g status-keys vi
+# Disable vi-keys in the status line (use emacs style for the tmux command prompt)
+set-option -g status-keys emacs
 
 # Prevent window renaming
 set-option -g allow-rename off
@@ -87,9 +87,6 @@ bind-key -r H resize-pane -L 5 # Left
 bind-key -r J resize-pane -D 5 # Down
 bind-key -r K resize-pane -U 5 # Up
 bind-key -r L resize-pane -R 5 # Right
-
-# Make window selection consistent with pane selection
-
 
 # Copy-paste vi style
 bind-key -T copy-mode-vi v send-keys -X begin-selection
