Reorganize tmux conf for readability

--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -23,20 +23,20 @@ set-option -g default-shell "/usr/local/bin/zsh"
 # Repeatable actions time window 1 second
 set-option -g repeat-time 1000
 
-# Disable vi-keys in the status line (use emacs style for the tmux command prompt)
-set-option -g status-keys emacs
-
 # Prevent window renaming
 set-option -g allow-rename off
 
 # Scrollback buffer size
 set-option -g history-limit 5000
 
-# Resize tmux to the smallest client attached to the window, instead of to the session
-set-window-option -g aggressive-resize on
+# Disable vi-keys in the status line (use emacs style for the tmux command prompt)
+set-option -g status-keys emacs
 
 # Activate vi-keys in copy mode
 set-window-option -g mode-keys vi
+
+# Resize tmux to the smallest client attached to the window, instead of to the session
+set-window-option -g aggressive-resize on
 
 # Deactivate notification bell
 set-window-option -g monitor-bell off
@@ -77,10 +77,10 @@ bind-key -n M-n select-window -t :+
 
 
 # Remove default go-to-up-pane to avoid involuntary activation with history search in ssh shells
-unbind-key Up
+#unbind-key Up
 
 # Remove default go-to-last pane to avoid involuntary activation when failing to select-right-pane
-unbind-key l
+#unbind-key l
 
 # Resize panes
 bind-key -r H resize-pane -L 5 # Left
