Improve keybindings for command line navigation in emacs mode

--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -47,7 +47,7 @@ set-window-option -g monitor-bell off
 
 # Prefix
 set-option -g prefix C-f
-set-option -g prefix2 C-b # Keep default prefix for other people
+#set-option -g prefix2 C-b # Keep default prefix for other people
 # Sending the prefix is confusing when trying to only hit prefix, so removing
 # If set to `f`, pressing `prefix + f` will send `C-f` to the underlying program
 # If set to `C-f`, pressing `prefix + prefix` will send `C-f` to the underlying program
