Increase shortcut options for pane splitting

--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -55,7 +55,11 @@ set-option -g prefix C-f
 
 # Pane splitting
 bind-key | split-window -h
+bind-key \ split-window -h
+bind-key v split-window -h
 bind-key - split-window -v
+bind-key _ split-window -v
+bind-key h split-window -v
 
 # Pane selection vi style
 bind-key -n M-h select-pane -L # Left
