--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -87,10 +87,10 @@ bind-key -n M-n select-window -t :+
 #unbind-key l
 
 # Resize panes
-bind-key -r H resize-pane -L 5 # Left
-bind-key -r J resize-pane -D 5 # Down
-bind-key -r K resize-pane -U 5 # Up
-bind-key -r L resize-pane -R 5 # Right
+bind-key -r h resize-pane -L 5 # Left
+bind-key -r j resize-pane -D 5 # Down
+bind-key -r k resize-pane -U 5 # Up
+bind-key -r l resize-pane -R 5 # Right
 
 # Copy-paste vi style
 bind-key -T copy-mode-vi v send-keys -X begin-selection
