--- a/dotfiles/.config/git/config
+++ b/dotfiles/.config/git/config
@@ -4,6 +4,7 @@
 
 [core]
 	excludesfile = ~/.config/git/ignore
+	hooksPath = ~/.config/git/hooks
 	pager = diff-so-fancy | less --tabs=4 -RFX
 
 [color]
