Pane splitting remembers the path

--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -54,12 +54,12 @@ set-option -g prefix C-f
 # bind-key C-f send-prefix
 
 # Pane splitting
-bind-key | split-window -h
-bind-key \ split-window -h
-bind-key v split-window -h
-bind-key - split-window -v
-bind-key _ split-window -v
-bind-key h split-window -v
+bind-key | split-window -h -c "#{pane_current_path}"
+bind-key \ split-window -h -c "#{pane_current_path}"
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key - split-window -v -c "#{pane_current_path}"
+bind-key _ split-window -v -c "#{pane_current_path}"
+bind-key h split-window -v -c "#{pane_current_path}"
 
 # Pane selection vi style
 bind-key -n M-h select-pane -L # Left
