Update ssh config

--- a/dotfiles/.ssh/config
+++ b/dotfiles/.ssh/config
@@ -17,7 +17,7 @@ Host *.onion
         UserKnownHostsFile      /dev/null
 
 # One stanza per environment:
-Host !jumpbox.dev.uw.systems !*.jumpbox.dev.uw.systems *.dev.uw.systems 10.66.* ip-10-66-*.compute.internal
+Host !jumpbox.dev.uw.systems !*.jumpbox.dev.uw.systems *.dev.uw.systems 10.66.* ip-10-66-*.compute.internal uw-* 10.91.* *.dev.merit.uw.systems 10.88.*
         IdentityFile            ~/.ssh/id_ed25519_uw
         User                    core
         ProxyJump               jumpbox.dev.uw.systems
