Add different style for tmux panes

--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -132,6 +132,8 @@ set-option -g status-attr default
 # default window title colors
 set-window-option -g window-status-fg colour244 #base0
 set-window-option -g window-status-bg default
+set-window-option -g window-style 'fg=colour255,bg=colour235'
+set-window-option -g window-active-style 'fg=colour255,bg=colour233'
 set-window-option -g window-status-attr dim
 
 # pane border
