--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -129,9 +129,12 @@ set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
 set-option -g status-attr default
 
-# default window title colors
+# status bar
+set-window-option -g window-status-current-fg colour136
 set-window-option -g window-status-fg colour244 #base0
 set-window-option -g window-status-bg default
+
+# default window title colors
 set-window-option -g window-style 'fg=colour255,bg=colour235'
 set-window-option -g window-active-style 'fg=colour255,bg=colour233'
 set-window-option -g window-status-attr dim
