Update ssh config

--- a/dotfiles/.ssh/config
+++ b/dotfiles/.ssh/config
@@ -5,8 +5,6 @@ Host jumpbox.*.uw.systems ?.jumpbox.*.uw.systems
         User                    core
         Port                    50620
         ConnectTimeout          60
-        StrictHostKeyChecking   no
-        UserKnownHostsFile      /dev/null
 Host *.onion
         IdentityFile            ~/.ssh/id_ed25519_uw
         User                     root
@@ -17,7 +15,7 @@ Host *.onion
         UserKnownHostsFile      /dev/null
 
 # One stanza per environment:
-Host !jumpbox.dev.uw.systems !*.jumpbox.dev.uw.systems *.dev.uw.systems 10.66.* ip-10-66-*.compute.internal uw-* 10.91.* *.dev.merit.uw.systems 10.88.*
+Host !jumpbox.dev.uw.systems !*.jumpbox.dev.uw.systems *.dev.uw.systems 10.66.* ip-10-66-*.compute.internal uw-* 10.91.* *.dev.merit.uw.systems 10.88.* *.exp-1.aws.uw.systems *.exp-2.aws.uw.systems
         IdentityFile            ~/.ssh/id_ed25519_uw
         User                    core
         ProxyJump               jumpbox.dev.uw.systems
@@ -38,7 +36,7 @@ Host !jumpbox.net.uw.systems !*.jumpbox.net.uw.systems *.net.uw.systems 10.5* ip
         StrictHostKeyChecking   no
         UserKnownHostsFile      /dev/null
 
-Host !jumpbox.dev.gcp.uw.systems !*.jumpbox.dev.gcp.uw.systems *.dev.gcp.uw.systems 10.22* *.uw-dev.internal
+Host !jumpbox.dev.gcp.uw.systems !*.jumpbox.dev.gcp.uw.systems *.dev.gcp.uw.systems 10.22* *.uw-dev.internal *.exp-1.gcp.uw.systems
         IdentityFile            ~/.ssh/id_ed25519_uw
         User                    core
         ProxyJump               jumpbox.dev.gcp.uw.systems
