--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -120,37 +120,24 @@ set-option -g status-right ' "#{=21:pane_title}" %a %d-%b %H:%M'
 # Styling #
 #---------#
 
-#################
-### COPYPASTED BEGIN
-######################
-
 # https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+set-option -g status-style 'fg=colour136,bg=colour235'
 
 # status bar
-set-window-option -g window-status-current-fg colour136
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
+set-window-option -g window-status-current-style 'fg=colour136'
+set-window-option -g window-status-style 'fg=colour244,bg=default,dim'
 
 # default window title colors
 set-window-option -g window-style 'fg=colour255,bg=colour235'
 set-window-option -g window-active-style 'fg=colour255,bg=colour233'
-set-window-option -g window-status-attr dim
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-window-option -g pane-border-style 'fg=colour235'
+set-window-option -g pane-active-border-style 'fg=colour240'
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set-option -g message-style 'fg=colour166,bg=colour235'
 
 # pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-####################
-### COPYPASTED END
-###################
+set-option -g display-panes-active-colour colour33
+set-option -g display-panes-colour colour166
