Fix tmux config

--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -55,7 +55,7 @@ set-option -g prefix C-f
 
 # Pane splitting
 bind-key | split-window -h -c "#{pane_current_path}"
-bind-key \ split-window -h -c "#{pane_current_path}"
+bind-key '\' split-window -h -c "#{pane_current_path}"
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key - split-window -v -c "#{pane_current_path}"
 bind-key _ split-window -v -c "#{pane_current_path}"
