Increase tmux scrollback buffer

--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -27,7 +27,7 @@ set-option -g repeat-time 1000
 set-option -g allow-rename off
 
 # Scrollback buffer size
-set-option -g history-limit 5000
+set-option -g history-limit 50000
 
 # Disable vi-keys in the status line (use emacs style for the tmux command prompt)
 set-option -g status-keys emacs
@@ -53,7 +53,7 @@ set-option -g prefix C-f
 # If set to `C-f`, pressing `prefix + prefix` will send `C-f` to the underlying program
 # bind-key C-f send-prefix
 
-# Pane splitting
+# Pane splitting (opening in the same directory)
 bind-key | split-window -h -c "#{pane_current_path}"
 bind-key '\' split-window -h -c "#{pane_current_path}"
 bind-key v split-window -h -c "#{pane_current_path}"
