Move ssh config to use wiresteward

--- a/dotfiles/.ssh/config
+++ b/dotfiles/.ssh/config
@@ -1,59 +1,24 @@
 # UW SSH
-# jumpboxes
 Host jumpbox.*.uw.systems ?.jumpbox.*.uw.systems
         IdentityFile            ~/.ssh/id_ed25519_uw
         User                    core
         Port                    50620
         ConnectTimeout          60
-Host *.onion
-        IdentityFile            ~/.ssh/id_ed25519_uw
-        User                     root
-        ProxyCommand            ncat --proxy-type socks5 --proxy 127.0.0.1:9050 %h %p
-        # To help with the slowness of tor
-        Compression             yes
-        StrictHostKeyChecking   no
-        UserKnownHostsFile      /dev/null
 
-# One stanza per environment:
-Host !jumpbox.dev.uw.systems !*.jumpbox.dev.uw.systems *.dev.uw.systems 10.66.* ip-10-66-*.compute.internal uw-* 10.91.* *.dev.merit.uw.systems 10.88.* *.exp-1.aws.uw.systems *.exp-2.aws.uw.systems
+Host 10.22.* 10.33.* 10.44.* 10.66.* 10.88.* 10.89.* *.dev.uw.systems *.dev.aws.uw.systems *.dev.gcp.uw.systems *.dev.merit.uw.systems *.exp-*.gcp.uw.systems *.exp-*.aws.uw.systems ip-10-66-*.compute.internal ip-10-44-*.compute.internal *.prod.uw.systems *.prod.aws.uw.systems *.prod.gcp.uw.systems *prod.merit.uw.systems *.uw-dev.internal *.uw-prod.internal
         IdentityFile            ~/.ssh/id_ed25519_uw
-        User                    core
-        ProxyJump               jumpbox.dev.uw.systems
-        StrictHostKeyChecking   no
-        UserKnownHostsFile      /dev/null
+        User                   core
+        StrictHostKeyChecking  no
+        UserKnownHostsFile     /dev/null
 
-Host !jumpbox.prod.uw.systems !*.jumpbox.prod.uw.systems *.prod.uw.systems 10.44.* ip-10-44-*.compute.internal
-        IdentityFile            ~/.ssh/id_ed25519_uw
-        User                    core
-        ProxyCommand            ssh -q jumpbox.prod.uw.systems ncat %h %p
-        StrictHostKeyChecking   no
-        UserKnownHostsFile      /dev/null
+Host ip-10-66-*.compute.internal
+        ProxyCommand           ncat $(dig +short @10.66.0.2 %h) %p
 
-Host !jumpbox.net.uw.systems !*.jumpbox.net.uw.systems *.net.uw.systems 10.5* ip-10-5*.compute.internal
-        IdentityFile            ~/.ssh/id_ed25519_uw
-        User                    core
-        ProxyCommand            ssh -q jumpbox.net.uw.systems ncat %h %p
-        StrictHostKeyChecking   no
-        UserKnownHostsFile      /dev/null
+Host ip-10-44-*.compute.internal
+        ProxyCommand           ncat $(dig +short @10.44.0.2 %h) %p
 
-Host !jumpbox.dev.gcp.uw.systems !*.jumpbox.dev.gcp.uw.systems *.dev.gcp.uw.systems 10.22* *.uw-dev.internal *.exp-1.gcp.uw.systems
-        IdentityFile            ~/.ssh/id_ed25519_uw
-        User                    core
-        ProxyJump               jumpbox.dev.gcp.uw.systems
-        StrictHostKeyChecking   no
-        UserKnownHostsFile      /dev/null
+Host *.uw-dev.internal
+        ProxyCommand           ncat $(dig +short @10.22.0.1 %h) %p
 
-Host !jumpbox.prod.gcp.uw.systems !*.jumpbox.prod.gcp.uw.systems *.prod.gcp.uw.systems 10.33* *.uw-prod.internal
-        IdentityFile            ~/.ssh/id_ed25519_uw
-        User                    core
-        ProxyJump               jumpbox.prod.gcp.uw.systems
-        StrictHostKeyChecking   no
-        UserKnownHostsFile      /dev/null
-Host 192.168.1.10*
-        IdentityFile            ~/.ssh/id_ed25519_uw
-        User                    core
-        Port                    50620
-				ProxyJump               zkcfmk55jht7dpny.onion
-        StrictHostKeyChecking   no
-        UserKnownHostsFile      /dev/null
-## End UW AWS configs ###
+Host *.uw-prod.internal
+        ProxyCommand           ncat $(dig +short @10.33.0.1 %h) %p
