--- a/dotfiles/.config/alacritty/alacritty.yml
+++ b/dotfiles/.config/alacritty/alacritty.yml
@@ -1,3 +1,7 @@
+# Once it is released, use the ~/... import style
+import:
+  - /Users/hh/.dotfiles/dotfiles/.config/alacritty/colors/hector.yml
+
 window:
   padding:
     x: 2
@@ -20,31 +24,6 @@ font:
   italic:
     family: Hack
     style: Italic
-
-colors:
-  primary:
-    background: '0x181818'
-    foreground: '0xf0f0f0'
-
-  normal:
-    black:   '0x102015'
-    red:     '0xe92f2f'
-    green:   '0x0ed839'
-    yellow:  '0xfd6f22'
-    blue:    '0x3b48e3'
-    magenta: '0xff3388'
-    cyan:    '0x23edda'
-    white:   '0xf9f9f9'
-
-  bright:
-    black:   '0x777777'
-    red:     '0xe92f2f'
-    green:   '0x0ed839'
-    yellow:  '0xfd6f22'
-    blue:    '0x3b48e3'
-    magenta: '0xff3388'
-    cyan:    '0x23edda'
-    white:   '0xf9f9f9'
 
 shell:
   program: /usr/local/bin/zsh
