Setting up truecolor in tmux

--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -2,13 +2,25 @@
 # Better defaults #
 #-----------------#
 
-# `screen` is the best family for $TERM, being the most general and widely available
-# `tmux` is better but not widely available, it may be needed for italics and other shenanigans
-# To use `tmux` it is needed to update the system's `terminfo` database or compile a new one
-# The default option "screen" only uses 8 colors, so this sets the 256 color one
-# To solve vim background clearing issues, it's likely that options like `-bce` or `-s` will be needed
-# I have a folder just for the $TERM issue in my bookmarks
-set-option -s default-terminal "screen-256color"
+# `default-terminal` sets which $TERM should tmux use.
+#
+# According to the documentation(https://man7.org/linux/man-pages/man1/tmux.1.html), "this must be
+# set to ‘screen’, ‘tmux’ or a derivative of them".
+#   * `screen` is the safest family for $TERM, being the most general and widely available
+#   * `tmux` is better but not widely available, it may be needed for italics and other shenanigans
+#   * `alacritty` seems compatible and it supports most shenanigans
+# I'm using alacritty since it works and I have it installed
+# If I had problems, I should use tmux-256color, which lives in ncurses terminfo
+#   * Download from https://invisible-island.net/datafiles/current/terminfo.src.gz
+#   * Install with `tic -xe tmux-256color terminfo.src`
+set-option -s default-terminal "alacritty"
+
+# `terminal-overrides` tell tmux additional features supported by an external terminal, which are
+# not present in the default-terminal's terminfo
+#
+# In the case of alacritty, even if true color is supported, it's terminfo doesn't set the
+# `RGB` flag, so we need to manually set it
+set-option -g terminal-overrides ",alacritty:RGB"
 
 # Setting the delay between prefix and command
 # This helps with issues with vim/neovim
