Fix weird inputs when using "Command" as "Meta" in alacritty

--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -56,6 +56,8 @@ set-window-option -g monitor-bell off
 #-------------#
 # Keybindings #
 #-------------#
+#
+# Fn bindings are used from remapped `Command+<key>`
 
 # Prefix
 set-option -g prefix C-f
@@ -74,29 +76,14 @@ bind-key _ split-window -v -c "#{pane_current_path}"
 bind-key h split-window -v -c "#{pane_current_path}"
 
 # Pane selection vi style
-bind-key -n M-h select-pane -L # Left
-bind-key -n M-j select-pane -D # Down
-bind-key -n M-k select-pane -U # Up
-bind-key -n M-l select-pane -R # Right
-#bind-key -r C-h select-pane -L # Left
-#bind-key -r C-j select-pane -D # Down
-#bind-key -r C-k select-pane -U # Up
-#bind-key -r C-l select-pane -R # Right
+bind-key -n F12 select-pane -L  # Left  (Command+h)
+bind-key -n F11 select-pane -D  # Down  (Command+j)
+bind-key -n F10 select-pane -U  # Up    (Command+k)
+bind-key -n F9 select-pane -R   # Right (Command+l)
 
 # Window selection vi style
-bind-key -n M-p select-window -t :-
-bind-key -n M-n select-window -t :+
-#bind-key -r C-p select-window -t :-
-#bind-key -r C-n select-window -t :+
-#unbind-key p
-#unbind-key n
-
-
-# Remove default go-to-up-pane to avoid involuntary activation with history search in ssh shells
-#unbind-key Up
-
-# Remove default go-to-last pane to avoid involuntary activation when failing to select-right-pane
-#unbind-key l
+bind-key -n F8 select-window -t :-  # Next      (Command+p)
+bind-key -n F7 select-window -t :+  # Previous  (Command+n)
 
 # Resize panes
 bind-key -r h resize-pane -L 5 # Left
