Make <C-Enter> and <S-Enter> available for shortcuts

--- a/dotfiles/.config/alacritty/alacritty.yml
+++ b/dotfiles/.config/alacritty/alacritty.yml
@@ -36,3 +36,5 @@ shell:
 
 key_bindings:
   - { key: Space, mods: Control, chars: "\x00" }
+  - { key: Return, mods: Shift, chars: "\x1b[13;2u" }
+  - { key: Return, mods: Control, chars: "\x1b[13;5u" }
