Add tmux new session shortcut

--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -104,6 +104,8 @@ bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Configuratio
 
 # Create a new window giving it a name
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
+# Create a new session giving it a name
+bind-key S command-prompt -p "Name of new session: " "new-session -s '%%'"
 
 #------------#
 # Status bar #
