--- a/dotfiles/.config/git/config
+++ b/dotfiles/.config/git/config
@@ -5,27 +5,16 @@
 [core]
 	excludesfile = ~/.config/git/ignore
 	hooksPath = ~/.config/git/hooks
-	pager = diff-so-fancy | less --tabs=4 -RFX
+	pager = delta
 
 [color]
 	ui = true
 
-[color "diff"]
-	meta = yellow
-	frag = magenta bold
-	commit = yellow bold
-	old = red bold
-	new = green bold
-	whitespace = red reverse
+[interactive]
+	diffFilter = delta --color-only
 
-[color "diff-highlight"]
-	oldNormal = red bold
-	oldHighlight = red bold 52
-	newNormal = green bold
-	newHighlight = green bold 22
-
-[diff-so-fancy]
-	markEmptyLines = false
+[delta]
+	side-by-side = true
 
 # Strongbox integration for UW
 [diff "strongbox"]
