--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -113,9 +113,15 @@ bind-key S command-prompt -p "Name of new session: " "new-session -s '%%'"
 
 # Center align window list
 set-option -g status-justify centre
+#set-option -g status-interval '1'
+
+# Formatting left side
+set-option -g status-left '#(tmux_status_left #{pane_current_path} #{client_prefix})'
+#set-option -g status-left-length '100'
 
 # Formatting right side
-set-option -g status-right ' "#{=21:pane_title}" %a %d-%b %H:%M'
+set-option -g status-right '#(tmux_status_right #{pane_id})'
+#set-option -g status-right-length '100'
 
 #---------#
 # Styling #
@@ -125,7 +131,7 @@ set-option -g status-right ' "#{=21:pane_title}" %a %d-%b %H:%M'
 set-option -g status-style 'fg=colour136,bg=colour235'
 
 # status bar
-set-window-option -g window-status-current-style 'fg=colour136'
+set-window-option -g window-status-current-style 'fg=colour136,bold'
 set-window-option -g window-status-style 'fg=colour244,bg=default,dim'
 
 # default window title colors
@@ -133,11 +139,11 @@ set-window-option -g window-style 'fg=colour255,bg=colour235'
 set-window-option -g window-active-style 'fg=colour255,bg=colour233'
 
 # pane border
-set-window-option -g pane-border-style 'fg=colour235'
-set-window-option -g pane-active-border-style 'fg=colour240'
+set-window-option -g pane-border-style 'fg=colour240'
+set-window-option -g pane-active-border-style 'fg=colour136'
 
 # message text
-set-option -g message-style 'fg=colour166,bg=colour235'
+set-option -g message-style 'fg=colour136,bg=colour235'
 
 # pane number display
 set-option -g display-panes-active-colour colour33
