Enable theming for tmux

--- a/dotfiles/.config/tmux/tmux.conf
+++ b/dotfiles/.config/tmux/tmux.conf
@@ -117,34 +117,8 @@ set-option -g status-justify centre
 
 # Formatting left side
 set-option -g status-left '#(tmux_status_left #{pane_current_path} #{client_prefix})'
-#set-option -g status-left-length '100'
+set-option -g status-left-length '100'
 
 # Formatting right side
 set-option -g status-right '#(tmux_status_right #{pane_id})'
-#set-option -g status-right-length '100'
-
-#---------#
-# Styling #
-#---------#
-
-# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
-set-option -g status-style 'fg=colour136,bg=colour235'
-
-# status bar
-set-window-option -g window-status-current-style 'fg=colour136,bold'
-set-window-option -g window-status-style 'fg=colour244,bg=default,dim'
-
-# default window title colors
-set-window-option -g window-style 'fg=colour255,bg=colour235'
-set-window-option -g window-active-style 'fg=colour255,bg=colour233'
-
-# pane border
-set-window-option -g pane-border-style 'fg=colour240'
-set-window-option -g pane-active-border-style 'fg=colour136'
-
-# message text
-set-option -g message-style 'fg=colour136,bg=colour235'
-
-# pane number display
-set-option -g display-panes-active-colour colour33
-set-option -g display-panes-colour colour166
+set-option -g status-right-length '100'
