--- a/dotfiles/.config/alacritty/colors/dracula.yml
+++ b/dotfiles/.config/alacritty/colors/dracula.yml
@@ -1,82 +1,27 @@
-# ...
+# https://github.com/alacritty/alacritty/wiki/Color-schemes#dracula
+# Updated with colors from https://draculatheme.com/contribute#color-palette
 
-# Colors (Dracula)
 colors:
-  # Default colors
   primary:
-    background: '0x282a36'
-    foreground: '0xf8f8f2'
+    background: "#282a36" # background
+    foreground: "#f8f8f2" # foreground
 
-    # Bright and dim foreground colors
-    #
-    # The dimmed foreground color is calculated automatically if it is not present.
-    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-    # is `false`, the normal foreground color will be used.
-    #dim_foreground: '0x9a9a9a'
-    #bright_foreground: '0xffffff'
-
-  # Cursor colors
-  #
-  # Colors which should be used to draw the terminal cursor. If these are unset,
-  # the cursor color will be the inverse of the cell color.
-  cursor:
-    text: '0x44475a'
-    cursor: '0xf8f8f2'
-
-  # Selection colors
-  #
-  # Colors which should be used to draw the selection area. If selection
-  # background is unset, selection color will be the inverse of the cell colors.
-  # If only text is unset the cell text color will remain the same.
-  selection:
-    text: '0xf8f8f2'
-    background: '0x44475a'
-
-  # Normal colors
   normal:
-    black:   '0x000000'
-    red:     '0xff5555'
-    green:   '0x50fa7b'
-    yellow:  '0xf1fa8c'
-    blue:    '0xbd93f9'
-    magenta: '0xff79c6'
-    cyan:    '0x8be9fd'
-    white:   '0xbfbfbf'
+    black:   "#44475a" # current line
+    red:     "#ff5555" # red
+    green:   "#50fa7b" # green
+    yellow:  "#f1fa8c" # yellow
+    blue:    "#bd93f9" # purple
+    magenta: "#ff79c6" # pink
+    cyan:    "#8be9fd" # cyan
+    white:   "#bfbfbf" # non-dracula custom white
 
-  # Bright colors
   bright:
-    black:   '0x4d4d4d'
-    red:     '0xff6e67'
-    green:   '0x5af78e'
-    yellow:  '0xf4f99d'
-    blue:    '0xcaa9fa'
-    magenta: '0xff92d0'
-    cyan:    '0x9aedfe'
-    white:   '0xe6e6e6'
-
-  # Dim colors
-  #
-  # If the dim colors are not set, they will be calculated automatically based
-  # on the `normal` colors.
-  dim:
-    black:   '0x14151b'
-    red:     '0xff2222'
-    green:   '0x1ef956'
-    yellow:  '0xebf85b'
-    blue:    '0x4d5b86'
-    magenta: '0xff46b0'
-    cyan:    '0x59dffc'
-    white:   '0xe6e6d1'
-
-  # Indexed Colors
-  #
-  # The indexed colors include all colors from 16 to 256.
-  # When these are not set, they're filled with sensible defaults.
-  #
-  # Example:
-  #   `- { index: 16, color: '0xff00ff' }`
-  #
-  indexed_colors: []
-
-# Visual Bell
-# ...
+    black:   "#6272a4" # zsh-autosuggestions (comment)
+    red:     "#ff5555" # red
+    green:   "#50fa7b" # green
+    yellow:  "#f1fa8c" # yellow
+    blue:    "#bd93f9" # purple
+    magenta: "#ff79c6" # pink
+    cyan:    "#8be9fd" # cyan
+    white:   '#0000ff' # pure blue placeholder, to detect usage
