--- a/dotfiles/.config/alacritty/colors/hector.yml
+++ b/dotfiles/.config/alacritty/colors/hector.yml
@@ -1,24 +1,24 @@
 colors:
   primary:
-    background: '0x181818'
-    foreground: '0xf0f0f0'
+    background: '#181818'
+    foreground: '#f0f0f0'
 
   normal:
-    black:   '0x102015'
-    red:     '0xe92f2f'
-    green:   '0x0ed839'
-    yellow:  '0xfd6f22'
-    blue:    '0x3b48e3'
-    magenta: '0xff3388'
-    cyan:    '0x23edda'
-    white:   '0xf9f9f9'
+    black:   '#102015'
+    red:     '#e92f2f'
+    green:   '#0ed839'
+    yellow:  '#fd6f22'
+    blue:    '#3b48e3'
+    magenta: '#ff3388'
+    cyan:    '#23edda'
+    white:   '#f9f9f9'
 
   bright:
-    black:   '0x777777'
-    red:     '0xe92f2f'
-    green:   '0x0ed839'
-    yellow:  '0xfd6f22'
-    blue:    '0x3b48e3'
-    magenta: '0xff3388'
-    cyan:    '0x23edda'
-    white:   '0xf9f9f9'
+    black:   '#999999' # zsh-autosuggestions
+    red:     '#e92f2f'
+    green:   '#0ed839'
+    yellow:  '#fd6f22'
+    blue:    '#3b48e3'
+    magenta: '#ff3388'
+    cyan:    '#23edda'
+    white:   '#0000ff' # pure blue placeholder, to detect usage
