--- a/dotfiles/.config/nvim/coc-settings.json
+++ b/dotfiles/.config/nvim/coc-settings.json
@@ -5,5 +5,6 @@
   "yaml.schemas": {
     "kubernetes": "kubernetes-manifests*.yaml"
   },
-  "diagnostic.displayByAle": true
+  "diagnostic.displayByAle": true,
+  "emmet.includeLanguages": { "javascript": "javascriptreact" }
 }
