Update ssh config

--- a/dotfiles/.ssh/config
+++ b/dotfiles/.ssh/config
@@ -1,24 +1,44 @@
-# UW SSH
-Host jumpbox.*.uw.systems ?.jumpbox.*.uw.systems
-        IdentityFile            ~/.ssh/id_ed25519_uw
-        User                    core
-        Port                    50620
-        ConnectTimeout          60
+# Restricting crypto to preferred algorithms only. Most likely will break something
 
-Host 10.22.* 10.33.* 10.44.* 10.66.* 10.88.* 10.89.* *.dev.uw.systems *.dev.aws.uw.systems *.dev.gcp.uw.systems *.dev.merit.uw.systems *.exp-*.gcp.uw.systems *.exp-*.aws.uw.systems ip-10-66-*.compute.internal ip-10-44-*.compute.internal *.prod.uw.systems *.prod.aws.uw.systems *.prod.gcp.uw.systems *prod.merit.uw.systems *.uw-dev.internal *.uw-prod.internal
-        IdentityFile            ~/.ssh/id_ed25519_uw
-        User                   core
-        StrictHostKeyChecking  no
-        UserKnownHostsFile     /dev/null
+# Preferred HostKeyAlgorithms: ssh-ed25519
+# Other acceptable HostKeyAlgorithms: rsa-sha2-512,curve25519-sha256
+HostKeyAlgorithms ssh-ed25519
+# Preferred KexAlgorithms: curve25519-sha256
+# Other acceptable KexAlgorithms: curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256,diffie-hellman-group16-sha512,
+KexAlgorithms curve25519-sha256
+# Preferred Ciphers: chacha20-poly1305@openssh.com
+# Other acceptable Ciphers: aes256-gcm@openssh.com
+Ciphers chacha20-poly1305@openssh.com
+# In theory, below MACs won't be used, since I'm using AEADs ciphers only, but need to set something to avoid insecure defaults
+MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com
+
+Host jumpbox.*.uw.systems
+        Port                    50620
+
+Host matchbox-?.*.merit.uw.systems
+        StrictHostKeyChecking   no
+        UserKnownHostsFile      /dev/null
+
+Host 10.22.* 10.33.* 10.44.* 10.66.* 10.88.* 10.89.* *.dev.uw.systems *.dev.aws.uw.systems *.dev.gcp.uw.systems *.dev.merit.uw.systems *.exp-*.gcp.uw.systems *.exp-*.aws.uw.systems *.exp-*.merit.uw.systems ip-10-66-*.compute.internal ip-10-44-*.compute.internal *.prod.uw.systems *.prod.aws.uw.systems *.prod.gcp.uw.systems *prod.merit.uw.systems *.uw-dev.internal *.uw-prod.internal
+        IdentityFile            ~/.ssh/id_ed25519
+        User                    core
+        StrictHostKeyChecking   yes
+        UserKnownHostsFile      ~/.ssh/known_hosts_uw
 
 Host ip-10-66-*.compute.internal
-        ProxyCommand           ncat $(dig +short @10.66.0.2 %h) %p
+        ProxyCommand            ncat $(dig +short @10.66.0.2 %h) %p
 
 Host ip-10-44-*.compute.internal
-        ProxyCommand           ncat $(dig +short @10.44.0.2 %h) %p
+        ProxyCommand            ncat $(dig +short @10.44.0.2 %h) %p
 
 Host *.uw-dev.internal
-        ProxyCommand           ncat $(dig +short @10.22.0.1 %h) %p
+        ProxyCommand            ncat $(dig +short @10.22.0.1 %h) %p
 
 Host *.uw-prod.internal
-        ProxyCommand           ncat $(dig +short @10.33.0.1 %h) %p
+        ProxyCommand            ncat $(dig +short @10.33.0.1 %h) %p
+
+Host moonshot-ebay-switch
+        Hostname                10.91.5.97
+        User                    admin
+        KexAlgorithms           +diffie-hellman-group1-sha1
+        Ciphers                 aes128-cbc
